2005-01-03  Tsuyoshi CHO  <mfalcon_sky@emailuser.net>

	* shimbun/sb-mailman.el (shimbun-mailman-headers): Modify regex
	for supporting quarter of a year message list (20xxq[1-4]); modify
	regex for message link to contain space before "I" tag.

	* shimbun/sb-wikimedia.el (shimbun-wikimedia-l10n-make-contents):
	Append "case-fold-search" local binding.

2005-01-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-mime-replace-image-tags): Allow not
	quoted url in img tags.
	Suggested by Tsuyoshi CHO <mfalcon_sky@emailuser.net>.

2004-12-24  Tsuyoshi CHO  <mfalcon_sky@emailuser.net>

	* shimbun/sb-excite.el: New file.

2005-01-10  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-form.el (w3m-form-input-textarea): Modify string of the
	inquiry.

2005-01-08  NOMIYA Masaru  <nomiya@ttmy.ne.jp>

	* shimbun/sb-japantimes.el (shimbun-japantimes-content-start):
	Improve the value.
	(shimbun-japantimes-content-end): Ditto.
	(shimbun-get-headers): Improve regexp; simplify Message-ID form.

	* shimbun/sb-nikkei.el (shimbun-nikkei-group-table): Add the
	gyosuuchi group.
	(shimbun-nikkei-get-headers-bunkatsu2): New function.
	(shimbun-nikkei-prepare-article-bunkatsu2): New function.

2005-01-07  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* w3m.el (w3m-goto-url): Call `w3m-form-textarea-files-remove' if
	necessary.

	* w3m-util.el (w3m-compare-strings): New define.

	* w3m-form.el (w3m-form-textarea-file-expire-date): Modify
	Document.
	(w3m-fontify-textareas): Put `w3m-form-file-name' property.
	(w3m-form-textarea-files, w3m-form-textarea-post-files): New
	buffer local variable.
	(w3m-form-parse-and-fontify): Set `w3m-form-textarea-files'. Put
	`w3m-form-file-name' property on the form of textarea.
	(w3m-form-input-textarea): Use same textarea buffer if exist.
	Don't ask user if don't modify its area without tailed white
	space.
	Visible the editted text when ask user.	Guard against 'C-g'.
	Added `w3m-form-textarea-file-cleanup' to hook as
	`kill-emacs-hook'